samples/_failures_safe/1761452175_fc6778_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85643d98.c: In function ‘main’:
./samples/SAFE/__tmp_85643d98.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("Error reading input.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_85643d98.c:153:9: error: expected declaration or statement at end of input
